--- a/backend/templates/base/navbar_b.html
+++ b/backend/templates/base/navbar_b.html
@@ -1,8 +1,7 @@
 <div class="container-fluid mt-4" style="text-align: center">
   <h1>
-    <a class="nav-link active" href="{% url 'blog' %}" rel="home" id="title-site">DuState</a>
+    <a class="nav-link active" href="{% url 'blog' %}" rel="home" id="title-site">Dubai States</a>
   </h1>
-
   <p style="opacity: 0.7; font-size: 1.125rem">Sharing insights on Real Estate in Dubai.</p>
 </div>
 
