--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Real Estate in Dubai</title>
+    <link rel="icon" href="{% static 'images/dxb.ico' %}" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,14 +20,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.datatables.net/2.0.6/css/dataTables.dataTables.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link href="https://cdn.datatables.net/2.0.6/css/dataTables.dataTables.min.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/2.0.6/css/dataTables.bootstrap5.css" rel="stylesheet" />
 
     <script src="https://kit.fontawesome.com/ae11d5f389.js" crossorigin="anonymous"></script>
@@ -84,6 +79,6 @@
     gtag('config', 'G-0MWYJ6Z9NQ')
   </script>
   <body>
-    {% block content %} {% endblock content %}
+    {% block content %} {% endblock content %}<br/>
   </body>
 </html>
