--- a/backend/templates/base/blog.html
+++ b/backend/templates/base/blog.html
@@ -71,9 +71,9 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h3 class="card-title">
-                  <a class="nav-link active" href="">Attract Money by Creating Value for a Specific Audience</a>
+                  <a class="nav-link active" href="{% url 'post_three' %}">Best Areas for Investment in Dubai</a>
                 </h3>
-                <p class="card-text">The best way to attract money is to create value for a specific audience.</p>
+                <p class="card-text">Here’s a brief review on some of the top areas to consider.</p>
                 <!-- <p class="card-text">
                 <small class="text-body-secondary">Last updated 3 mins ago</small>
               </p> -->
