--- a/backend/templates/base/navbar.html
+++ b/backend/templates/base/navbar.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'blog' %}">Blog</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'blog' %}">Recent Posts</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#bar-chart">Latest Transactions</a>
