--- a/backend/templates/base/blog.html
+++ b/backend/templates/base/blog.html
@@ -60,11 +60,12 @@
         <div class="card border-0" id="blog-post">
           <div class="row g-0">
             <div class="col-md-4">
-              <a href="">
+              <a href="{% url 'post_three' %}">
                 <img
                   src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                   class="img-fluid rounded-start"
                   alt="..."
+                  id="img-card"
                 />
               </a>
             </div>
